# szl

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  Makefile  Makefile.common  README  doxygen.conf  meson.build  meson_options.txt  szl.c  szl.h  szl.txt  szl_exc.c  szl_ext.c  szl_io.c  szl_logic.c  szl_loop.c  szl_math.c  szl_obj.c  szl_platform.h  szl_posix.c  szl_proc.c  szl_sugar.szl  szl_zlib.c  szlsh.1.in
doc/: .gitignore  CMakeLists.txt  Makefile  doxygen.conf  meson.build  szl.1  szl.1.in  szl.txt  szlsh.1
src/: .gitignore  CMakeLists.txt  Makefile  libszl.c  meson.build  minify.sh  mkbuiltin.sh  szl.c  szl.h  szl_archive.c  szl_conf.h.in  szl_curl.c  szl_dict.c  szl_dict.szl  szl_dir.c  szl_dir.szl  szl_ed25519.c  szl_env.c  szl_exc.c  szl_exec.c  szl_ext.c  szl_ffi.c  szl_file.c  szl_http.c  szl_http.szl  szl_https.c  szl_https.szl  szl_io.c  szl_io.szl  szl_linenoise.c  szl_list.c  szl_list.szl  szl_logic.c  szl_loop.c  szl_loop.szl  szl_lzfse.c  szl_math.c  szl_null.c  szl_obj.c  szl_oop.c  (+30 more)
test/: .gitignore  Makefile  szl_test.c  szl_test.h  test_all.szl  test_and.szl  test_any.szl  test_calc.szl  test_dict_get.szl  test_dict_set.szl  test_do.szl  test_ed25519.szl  test_expand.szl  test_for.szl  test_format.szl  test_if.szl  test_map.szl  test_not.szl  test_or.szl  test_str_expand.szl  test_str_format.szl  test_str_len.szl  test_str_length.szl  test_switch.szl  test_szl_split.c  test_szl_split_line.c  test_szl_split_lines.c  test_szl_trim.c  test_test.szl  test_zlib_crc32.szl  test_zlib_deflate_inflate_gzip_gunzip.szl
