# this file is part of szl.
#
# Copyright (c) 2016 Dima Krasner
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

option('builtin_all', type : 'boolean', value : false)
option('with_dl', type : 'boolean', value : true)

option('builtin_zlib', type : 'boolean', value : false)
option('builtin_tls', type : 'boolean', value : false)
option('builtin_ffi', type : 'boolean', value : false)
option('builtin_curl', type : 'boolean', value : false)
option('builtin_archive', type : 'boolean', value : false)
option('builtin_linenoise', type : 'boolean', value : false)
option('builtin_ed25519', type : 'boolean', value : false)
option('builtin_lzfse', type : 'boolean', value : false)
option('builtin_zstd', type : 'boolean', value : false)
option('builtin_test', type : 'boolean', value : false)
option('builtin_oop', type : 'boolean', value : false)
option('builtin_server', type : 'boolean', value : false)
option('builtin_resp', type : 'boolean', value : false)
option('builtin_http', type : 'boolean', value : false)
option('builtin_https', type : 'boolean', value : false)
