# this file is part of szl.
#
# Copyright (c) 2016, 2017 Dima Krasner
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

option('builtin_all', type: 'boolean', value: false)
option('with_dl', type: 'boolean', value: true)
option('use_int', type: 'boolean', value: false)
option('with_float', type: 'boolean', value: true)
option('use_float', type: 'boolean', value: false)
option('with_unicode', type: 'boolean', value: true)

option('with_zlib', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_tls', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_ffi', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_curl', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_archive', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_linenoise', type: 'combo', choices : ['yes', 'builtin'], value: 'yes')
option('with_ed25519', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_lzfse', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_zstd', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_test', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_oop', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_server', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_resp', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_http', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
option('with_https', type: 'combo', choices : ['no', 'yes', 'builtin'], value: 'yes')
